[gd_scene load_steps=60 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://sprites/Hintergrund.png" type="Texture" id=2]
[ext_resource path="res://scenes/Tree.gd" type="Script" id=3]
[ext_resource path="res://sprites/trees/Standard_Baum.png" type="Texture" id=4]
[ext_resource path="res://sprites/trees/Birken_Baum.png" type="Texture" id=5]
[ext_resource path="res://sprites/trees/Kirsch_Baum.png" type="Texture" id=6]
[ext_resource path="res://sprites/trees/Eukalyptus_Baum.png" type="Texture" id=7]
[ext_resource path="res://scenes/branch.gd" type="Script" id=8]
[ext_resource path="res://sprites/branches/Standard_Ast.png" type="Texture" id=9]
[ext_resource path="res://sprites/branches/Birken_Ast.png" type="Texture" id=10]
[ext_resource path="res://sprites/branches/Kirsch_Ast.png" type="Texture" id=11]
[ext_resource path="res://sprites/branches/Eukalyptus_Ast.png" type="Texture" id=12]
[ext_resource path="res://scenes/branchSprite.gd" type="Script" id=13]
[ext_resource path="res://scenes/human.gd" type="Script" id=14]
[ext_resource path="res://scenes/Weapon.gd" type="Script" id=15]
[ext_resource path="res://sprites/holz.png" type="Texture" id=16]
[ext_resource path="res://sounds/Holzbruch2_sound.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/Holzbruch1_sound.wav" type="AudioStream" id=18]
[ext_resource path="res://sounds/gameOver_sound.wav" type="AudioStream" id=19]
[ext_resource path="res://scenes/Stopwatch.gd" type="Script" id=20]
[ext_resource path="res://sounds/weapons/Fuchsschwanzsaege_hin.wav" type="AudioStream" id=21]
[ext_resource path="res://sounds/weapons/Fuchsschwanzsaege_zurueck.wav" type="AudioStream" id=22]
[ext_resource path="res://sounds/weapons/Kettensaege_hin.wav" type="AudioStream" id=23]
[ext_resource path="res://sounds/weapons/Kettensaege_zurueck.wav" type="AudioStream" id=24]
[ext_resource path="res://sounds/weapons/Kreissaege_hin.wav" type="AudioStream" id=25]
[ext_resource path="res://sounds/weapons/Kreissaege_zurueck.wav" type="AudioStream" id=26]
[ext_resource path="res://sounds/weapons/Taschenmesser_hin.wav" type="AudioStream" id=27]
[ext_resource path="res://sounds/weapons/Taschenmesser_zurueck.wav" type="AudioStream" id=28]
[ext_resource path="res://HUD.gd" type="Script" id=29]
[ext_resource path="res://fonts/planetbe.ttf" type="DynamicFontData" id=30]
[ext_resource path="res://scenes/pointLabel.gd" type="Script" id=31]
[ext_resource path="res://scenes/sawdustLabel.gd" type="Script" id=32]
[ext_resource path="res://sprites/GUI/healthbar.png" type="Texture" id=33]
[ext_resource path="res://scenes/Sprite.gd" type="Script" id=34]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=35]
[ext_resource path="res://sprites/GUI/Menu_Background.png" type="Texture" id=36]
[ext_resource path="res://sprites/GUI/Button_Empty.png" type="Texture" id=37]
[ext_resource path="res://scenes/Upgrade.gd" type="Script" id=38]
[ext_resource path="res://sounds/Upgrade.wav" type="AudioStream" id=39]
[ext_resource path="res://scenes/Restart.gd" type="Script" id=40]
[ext_resource path="res://scenes/Quit.gd" type="Script" id=41]
[ext_resource path="res://scenes/TimeBonusLabel.gd" type="Script" id=42]
[ext_resource path="res://scenes/Highscore.gd" type="Script" id=43]
[ext_resource path="res://scenes/TreesKilled.gd" type="Script" id=44]
[ext_resource path="res://sounds/select.wav" type="AudioStream" id=45]
[ext_resource path="res://scenes/Camera2D.gd" type="Script" id=46]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Standard",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Birken",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Kirsch",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Eukalyptus",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Standard",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "Birken",
"speed": 0.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Kirsch",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Eukalyptus",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 395.962, 175.891 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0182693, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 551, 629 ), Vector2( 551, 629 ), Vector2( 551, 2629 ) ]
}

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 600, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.8
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 10.0
angle_random = 1.0
scale = 0.5
scale_random = 0.5

[sub_resource type="DynamicFont" id=6]
size = 128
outline_size = 6
outline_color = Color( 0.443137, 0.184314, 0.184314, 1 )
extra_spacing_char = 2
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=7]
size = 92
outline_size = 4
outline_color = Color( 0.486275, 0.223529, 0.223529, 1 )
extra_spacing_char = 2
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=9]
size = 68
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 20
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=10]
size = 68
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 7
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=11]
size = 74
outline_size = 5
outline_color = Color( 0.529412, 0.0784314, 0.0784314, 1 )
extra_spacing_char = 4
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=12]
size = 54
outline_size = 4
outline_color = Color( 0.168627, 0.129412, 0.45098, 1 )
extra_spacing_char = 6
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=13]
size = 36
outline_size = 3
outline_color = Color( 0.380392, 0.109804, 0.109804, 1 )
extra_spacing_char = 2
font_data = ExtResource( 30 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="Environment" type="Node2D" parent="."]

[node name="background" type="Sprite" parent="Environment"]
z_index = -10
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="right side" type="Sprite" parent="Environment"]
position = Vector2( 1080, 54 )
z_index = -10
texture = ExtResource( 2 )
centered = false

[node name="left side" type="Sprite" parent="Environment"]
position = Vector2( -1080, -54 )
z_index = -10
texture = ExtResource( 2 )
centered = false

[node name="Tree" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="trunk" type="AnimatedSprite" parent="Tree"]
frames = SubResource( 1 )
animation = "Kirsch"
centered = false

[node name="branch" type="Area2D" parent="Tree"]
position = Vector2( 521.548, 628.869 )
z_index = 4
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="branchSprite" type="AnimatedSprite" parent="Tree/branch"]
z_index = 7
z_as_relative = false
frames = SubResource( 2 )
animation = "Standard"
centered = false
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tree/branch"]
visible = false
position = Vector2( 128, 80 )
shape = SubResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="Tree/branch"]
anims/fall = SubResource( 4 )

[node name="human" type="Node2D" parent="Tree/branch"]
position = Vector2( -1.29999, 28.6 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 14 )

[node name="Weapon" type="Node2D" parent="Tree/branch/human"]
z_index = 6
z_as_relative = false
script = ExtResource( 15 )

[node name="sawdust" type="Particles2D" parent="Tree/branch/human/Weapon"]
position = Vector2( 0, 500 )
z_index = 1
emitting = false
amount = 500
lifetime = 10.0
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 16 )

[node name="SawdustTimer" type="Timer" parent="Tree/branch/human/Weapon"]
wait_time = 0.1
one_shot = true

[node name="Holzbruch2" type="AudioStreamPlayer" parent="Tree/branch"]
stream = ExtResource( 17 )
volume_db = -5.0

[node name="Knochenbruch1" type="AudioStreamPlayer" parent="Tree/branch"]
stream = ExtResource( 18 )

[node name="gameOver" type="AudioStreamPlayer" parent="Tree/branch"]
stream = ExtResource( 19 )
volume_db = -5.0

[node name="PointsStopwatch" type="Node" parent="Tree/branch"]
script = ExtResource( 20 )

[node name="WeaponSounds" type="Node" parent="Tree/branch"]
editor/display_folded = true

[node name="Fuchsschwanzsaege_hin" type="AudioStreamPlayer" parent="Tree/branch/WeaponSounds"]
stream = ExtResource( 21 )
volume_db = -10.0

[node name="Fuchsschwanzsaege_zurueck" type="AudioStreamPlayer" parent="Tree/branch/WeaponSounds"]
stream = ExtResource( 22 )
volume_db = -10.0

[node name="Kettensaege_hin" type="AudioStreamPlayer" parent="Tree/branch/WeaponSounds"]
stream = ExtResource( 23 )
volume_db = -10.0

[node name="Kettensaege_zurueck" type="AudioStreamPlayer" parent="Tree/branch/WeaponSounds"]
stream = ExtResource( 24 )
volume_db = -10.0

[node name="Kreissaege_hin" type="AudioStreamPlayer" parent="Tree/branch/WeaponSounds"]
stream = ExtResource( 25 )
volume_db = -10.0

[node name="Kreissaege_zurueck" type="AudioStreamPlayer" parent="Tree/branch/WeaponSounds"]
stream = ExtResource( 26 )
volume_db = -10.0

[node name="Taschenmesser_hin" type="AudioStreamPlayer" parent="Tree/branch/WeaponSounds"]
stream = ExtResource( 27 )
volume_db = -10.0

[node name="Taschenmesser_zurueck" type="AudioStreamPlayer" parent="Tree/branch/WeaponSounds"]
stream = ExtResource( 28 )
volume_db = -10.0

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 29 )

[node name="pointLabel" type="Label" parent="HUD"]
margin_top = 203.069
margin_right = 542.952
margin_bottom = 398.069
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
script = ExtResource( 31 )

[node name="sawdustLabel" type="Label" parent="HUD"]
margin_left = 430.335
margin_top = 55.0083
margin_right = 969.335
margin_bottom = 195.008
custom_fonts/font = SubResource( 7 )
text = "0"
align = 2
valign = 1
script = ExtResource( 32 )

[node name="lives" type="Sprite" parent="HUD"]
z_index = -1
texture = ExtResource( 33 )
centered = false
script = ExtResource( 34 )

[node name="Holz" type="Sprite" parent="HUD"]
position = Vector2( 1024.86, 132.019 )
rotation = 0.268781
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 16 )

[node name="Menu" type="CanvasLayer" parent="."]
script = ExtResource( 35 )

[node name="background" type="Sprite" parent="Menu"]
position = Vector2( 541.48, 1260.12 )
z_index = -1
texture = ExtResource( 36 )

[node name="Upgrade" type="Button" parent="Menu/background"]
editor/display_folded = true
margin_left = -465.498
margin_top = 25.8811
margin_right = 470.502
margin_bottom = 197.881
custom_fonts/font = SubResource( 8 )
icon = ExtResource( 37 )
flat = true
script = ExtResource( 38 )

[node name="UpgradeSound" type="AudioStreamPlayer" parent="Menu/background/Upgrade"]
stream = ExtResource( 39 )

[node name="UPGRADE" type="Label" parent="Menu/background/Upgrade"]
margin_left = 208.954
margin_top = 23.3032
margin_right = 688.954
margin_bottom = 127.303
custom_fonts/font = SubResource( 9 )
text = "upgrade"
align = 1
valign = 1

[node name="Restart" type="Button" parent="Menu/background"]
editor/display_folded = true
margin_left = -462.609
margin_top = -162.158
margin_right = 473.391
margin_bottom = 9.84167
icon = ExtResource( 37 )
flat = true
align = 0
script = ExtResource( 40 )

[node name="RESTART" type="Label" parent="Menu/background/Restart"]
margin_left = 204.651
margin_top = 20.5056
margin_right = 691.651
margin_bottom = 124.506
custom_fonts/font = SubResource( 9 )
text = "restart!"
align = 1
valign = 1

[node name="Quit" type="Button" parent="Menu/background"]
editor/display_folded = true
margin_left = -468.611
margin_top = 211.445
margin_right = 467.389
margin_bottom = 383.445
custom_fonts/font = SubResource( 8 )
icon = ExtResource( 37 )
flat = true
script = ExtResource( 41 )

[node name="QUIT" type="Label" parent="Menu/background/Quit"]
margin_left = 208.954
margin_top = 31.556
margin_right = 666.954
margin_bottom = 135.556
custom_fonts/font = SubResource( 9 )
text = "quit"
align = 1
valign = 1

[node name="youdied" type="Label" parent="Menu/background"]
margin_left = -418.83
margin_top = -390.634
margin_right = 422.17
margin_bottom = -179.634
custom_fonts/font = SubResource( 10 )
text = "CONGRATULATIONS,
YOU DIED!"
align = 1
valign = 1

[node name="TimeBonusLabel" type="Label" parent="Menu"]
margin_left = 18.2422
margin_top = 493.325
margin_right = 583.242
margin_bottom = 606.325
custom_fonts/font = SubResource( 11 )
text = "Time Bonus: "
valign = 1
script = ExtResource( 42 )

[node name="Highscore" type="Label" parent="Menu"]
margin_left = 8.0
margin_top = 6.0
margin_right = 549.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.533333, 0.568627, 0.878431, 1 )
text = "Highscore: "
autowrap = true
script = ExtResource( 43 )

[node name="TreesKilled" type="Label" parent="Menu"]
margin_left = 541.848
margin_top = 643.589
margin_right = 1073.85
margin_bottom = 721.589
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.878431, 0.419608, 0.419608, 1 )
text = "Trees killed: "
valign = 1
autowrap = true
script = ExtResource( 44 )

[node name="select" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 45 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 46 )
[connection signal="fall" from="Tree" to="Tree/branch" method="_on_Tree_fall"]
[connection signal="cut" from="Tree/branch" to="HUD/sawdustLabel" method="_on_branch_cut"]
[connection signal="cut" from="Tree/branch" to="Menu" method="_on_branch_cut"]
[connection signal="cut" from="Tree/branch" to="Menu/TreesKilled" method="_on_branch_cut"]
[connection signal="cut" from="Tree/branch" to="Menu/TimeBonusLabel" method="_on_branch_cut"]
[connection signal="slash" from="Tree/branch" to="HUD/pointLabel" method="_on_branch_slash"]
[connection signal="slash" from="Tree/branch" to="HUD/sawdustLabel" method="_on_branch_slash"]
[connection signal="slash" from="Tree/branch" to="Tree" method="_on_branch_slash"]
[connection signal="slash" from="Tree/branch" to="Tree/branch/human/Weapon" method="_on_branch_slash"]
[connection signal="slash" from="Tree/branch" to="HUD" method="_on_branch_slash"]
[connection signal="animation_finished" from="Tree/branch/Animation" to="Tree/branch" method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Tree/branch/human/Weapon/SawdustTimer" to="Tree/branch/human/Weapon" method="_on_SawdustTimer_timeout"]
[connection signal="mouse_entered" from="Menu/background/Upgrade" to="Menu/background/Upgrade" method="_on_Upgrade_mouse_entered"]
[connection signal="mouse_exited" from="Menu/background/Upgrade" to="Menu/background/Upgrade" method="_on_Upgrade_mouse_exited"]
[connection signal="pressed" from="Menu/background/Upgrade" to="Menu/background/Upgrade" method="_on_Upgrade_pressed"]
[connection signal="mouse_entered" from="Menu/background/Restart" to="Menu/background/Restart" method="_on_Restart_mouse_entered"]
[connection signal="mouse_exited" from="Menu/background/Restart" to="Menu/background/Restart" method="_on_Restart_mouse_exited"]
[connection signal="mouse_entered" from="Menu/background/Quit" to="Menu/background/Quit" method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/background/Quit" to="Menu/background/Quit" method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="Menu/background/Quit" to="Menu/background/Quit" method="_on_Quit_pressed"]
[connection signal="TimeBonusCalculated" from="Menu/TimeBonusLabel" to="Menu/Highscore" method="_on_TimeBonusLabel_TimeBonusCalculated"]
